# AShareAgent

./: .gitignore  AI_HANDOFF.md  AI_PROJECT_GUIDE.md  README.md  RUN_ONE_CLICK.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_backtester_example.py  start_fullstack.cmd  start_fullstack.ps1  two_week_action_plan.md  一键启动.cmd
.claude/: settings.local.json
artifacts/day9/: README.md  ablation_metrics.csv  ablation_metrics.json  agent_type_comparison.json  five_ticker_integration.csv  five_ticker_integration.json  rag_retrieval_sample.json
backend/: README.md  main.py  schemas.py  state.py
backend/models/: api_models.py  auth_models.py
backend/routers/: agents.py  analysis.py
backend/services/: analysis.py  backtest_service.py
backend/utils/: context_managers.py  decision_formatter.py
frontend/: index.html  package.json
frontend/scripts/: append_css.py  refactor.py
frontend/src/: App.css  App.tsx  index.css
scripts/: build_pb_csv.py  day9_generate_artifacts.py  init_system.py  rebuild_slim_db.py  run_ablation_study.py  run_multi_ticker_analysis.py
src/: __init__.py  main.py
src/agents/: debate_room.py  fundamentals.py  macro_analyst.py  macro_news_agent.py  market_data.py  portfolio_manager.py  researcher_bear.py  researcher_bull.py  risk_manager.py  sentiment.py  state.py  technicals.py  valuation.py
src/backtesting/: __init__.py  backtester.py  benchmarks.py  cache.py  metrics.py  models.py  trading.py  visualizer.py
src/core/: __init__.py
src/crawler/: __init__.py  search.py
src/database/: __init__.py  data_service.py  (+2 more)
(+76 files in other folders)
